# Coral

./: .gitignore  CMakeLists.txt  README.md  confronto_arduino_espidf.md  istruzioni.txt  partitions.csv  sdkconfig  sdkconfig.defaults
Notebooks/: EsperimentiYOLO.ipynb  EsperimentiYOLO2.ipynb  ProvaMobileNet.ipynb  ProvaYOLO.ipynb  istruzioni.txt  requirements.txt  yolo11n.espdl  yolo11n.json
Notebooks/Modelli/: yolo11n_full_integer_quant.tflite  yolo11n_integer_quant.tflite
Notebooks/Modelli/Fallimenti/: yolo11n_int8.tflite  yolov11n_int8_true.tflite
Notebooks/yolo11n_saved_model/: fingerprint.pb  metadata.yaml  yolo11n_full_integer_quant.tflite  yolo11n_int8.tflite  yolo11n_integer_quant.tflite
components/camera/: CMakeLists.txt  camera.cpp  camera.h
components/inference/: CMakeLists.txt  inference.cpp  yolo11n.espdl
components/inference/include/: inference.h
components/inference/models/: yolo11n_int8.tflite
components/led_control/: CMakeLists.txt  led_control.cpp  led_control.h
components/monitor/: CMakeLists.txt  monitor.cpp
components/monitor/include/: monitor.h
components/webserver/: CMakeLists.txt  camera.cpp  main_page.html  webserver.c  webserver.cpp  webserver.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
